// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The WorkspaceEvents component snapshot - empty state 1`] = `
<div
  className="pf-v6-c-empty-state"
>
  <div
    className="pf-v6-c-empty-state__content"
  >
    <div
      className="pf-v6-c-empty-state__header"
    >
      <div
        className="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 384 512"
          width="1em"
        >
          <path
            d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          />
        </svg>
      </div>
      <div
        className="pf-v6-c-empty-state__title"
      >
        <h1
          className="pf-v6-c-empty-state__title-text"
        >
          No events to show.
        </h1>
      </div>
    </div>
    <div
      className="pf-v6-c-empty-state__body"
    >
      Events will be streamed for a starting workspace.
    </div>
  </div>
</div>
`;

exports[`The WorkspaceEvents component snapshot - no events 1`] = `
<section
  className="pf-v6-c-page__main-section"
>
  <div
    className="pf-v6-c-page__main-body"
  >
    <div
      aria-label="Workspace events"
      aria-live="polite"
      role="log"
    >
      <div
        className="pf-v6-l-stack"
      >
        <div
          className="pf-v6-l-stack__item"
        >
          <div
            className="pf-v6-l-flex pf-m-align-items-center"
          >
            <div
              className=""
            >
              <button
                aria-label="Pause event streaming"
                aria-pressed={false}
                className="pf-v6-c-button pf-m-plain pauseButton active"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="pf-v6-c-button__text"
                >
                  <span
                    className="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              className=""
            >
              <small
                className="pf-v6-c-content--small"
                data-ouia-component-id="OUIA-Generated-Content-1"
                data-ouia-component-type="PF6/Content"
                data-ouia-safe={true}
                data-pf-content={true}
              >
                Streaming events...
              </small>
            </div>
            <div
              className="pf-m-align-right"
            >
              <small
                className="pf-v6-c-content--small"
                data-ouia-component-id="OUIA-Generated-Content-2"
                data-ouia-component-type="PF6/Content"
                data-ouia-safe={true}
                data-pf-content={true}
              >
                Showing 
                <span
                  className={null}
                  style={{}}
                >
                  0 events
                </span>
              </small>
            </div>
          </div>
        </div>
        <div
          className="pf-v6-l-stack__item"
        >
          <small
            className="pf-v6-c-content--small footer"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            Older events are not stored.
          </small>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`The WorkspaceEvents component snapshot - with events 1`] = `
<section
  className="pf-v6-c-page__main-section"
>
  <div
    className="pf-v6-c-page__main-body"
  >
    <div
      aria-label="Workspace events"
      aria-live="polite"
      role="log"
    >
      <div
        className="pf-v6-l-stack"
      >
        <div
          className="pf-v6-l-stack__item"
        >
          <div
            className="pf-v6-l-flex pf-m-align-items-center"
          >
            <div
              className=""
            >
              <button
                aria-label="Pause event streaming"
                aria-pressed={false}
                className="pf-v6-c-button pf-m-plain pauseButton active"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe={true}
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="pf-v6-c-button__text"
                >
                  <span
                    className="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              className=""
            >
              <small
                className="pf-v6-c-content--small"
                data-ouia-component-id="OUIA-Generated-Content-4"
                data-ouia-component-type="PF6/Content"
                data-ouia-safe={true}
                data-pf-content={true}
              >
                Streaming events...
              </small>
            </div>
            <div
              className="pf-m-align-right"
            >
              <small
                className="pf-v6-c-content--small"
                data-ouia-component-id="OUIA-Generated-Content-5"
                data-ouia-component-type="PF6/Content"
                data-ouia-safe={true}
                data-pf-content={true}
              >
                Showing 
                <span
                  className={null}
                  style={{}}
                >
                  2 events
                </span>
              </small>
            </div>
          </div>
        </div>
        <div
          className="pf-v6-l-stack__item"
        >
          <div
            className="eventsTimeline"
          >
            <div
              className="pf-v6-l-stack pf-m-gutter"
            >
              <div
                className="pf-v6-l-stack__item"
              >
                <div
                  className="fadeIn"
                >
                  <div
                    data-testid="event-item"
                  >
                    <span
                      data-testid="event-message"
                    >
                      message 2
                    </span>
                    <span
                      data-testid="event-time"
                    >
                      2021-03-31T14:01:00.000Z
                    </span>
                    <span
                      data-testid="event-source"
                    >
                       on 
                    </span>
                    <span
                      data-testid="event-involved-object"
                    >
                      Pod
                       
                      devWorkspace-pod
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="pf-v6-l-stack__item"
              >
                <div
                  className="fadeIn"
                >
                  <div
                    data-testid="event-item"
                  >
                    <span
                      data-testid="event-message"
                    >
                      message 1
                    </span>
                    <span
                      data-testid="event-time"
                    >
                      2021-03-31T14:00:00.000Z
                    </span>
                    <span
                      data-testid="event-source"
                    >
                       on 
                    </span>
                    <span
                      data-testid="event-involved-object"
                    >
                      Pod
                       
                      devWorkspace-pod
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="pf-v6-l-stack__item"
        >
          <small
            className="pf-v6-c-content--small footer"
            data-ouia-component-id="OUIA-Generated-Content-6"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe={true}
            data-pf-content={true}
          >
            Older events are not stored.
          </small>
        </div>
      </div>
    </div>
  </div>
</section>
`;
